--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Happy New Year</title>
-    <link rel="shortcut icon" href="/ascet/home.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./ascet/home.png" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                 <h5>ALL CATEGORIES</h5>
             </div>
             <div class="off-img">
-                <img src="/ascet/New Year Photo.png" alt="Hpappy new year image">
+                <img src="./ascet/New Year Photo.png" alt="Hpappy new year image">
             </div>
         </div>
         <!-- <div class="best-gift">
