input section done

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <h4>Subscribe Newsletter</h4>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         <div class="newslatter-input">
-            <input type="email" name="" id="" placeholder="user@gmail.com">
-            <button>Subscribe</button>
+            <input class="newslatter-gmail" type="email" name="" id="" placeholder="user@gmail.com">
+            <button class="btn-sub">Subscribe</button>
         </div>
 
     </div>
