change common style

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
         </div> -->
     <div class="newsletter">
-        <img src="/ascet/Group 61.png" alt="">
+        <img src="./ascet/Group 61.png" alt="">
         <h4>Subscribe Newsletter</h4>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         <div class="newslatter-input">
