--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,38 +37,62 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod.</p>
                 <div class="Photo-felx">
-                    <div>
-                        <img src="/ascet/Rectangle 3.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 3.png" alt="">
                     </div>
-                    <div>
-                        <img src="/ascet/Rectangle 4.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 4.png" alt="">
                     </div>
-                    <div>
-                        <img src="/ascet/Rectangle 5.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 5.png" alt="">
                     </div>
-                    <div>
-                        <img src="/ascet/Rectangle 6.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 6.png" alt="">
                     </div>
-                    <div>
-                        <img src="/ascet/Rectangle 7.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 7.png" alt="">
                     </div>
-                    <div>
-                        <img src="/ascet/Rectangle 8.png" alt="">
+                    <div class="Photo">
+                        <img src="../ascet/Rectangle 8.png" alt="">
                     </div>
-                </div>
-        </div> -->
-    <div class="newsletter">
-        <img src="./ascet/Group 61.png" alt="">
-        <h4>Subscribe Newsletter</h4>
-        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-        <div class="newslatter-input">
-            <input class="newslatter-gmail" type="email" name="" id="" placeholder="user@gmail.com">
-            <button class="btn-sub">Subscribe</button>
+                </div> -->
+        </div> 
+        <div class="newsletter">
+            <img src="./ascet/Group 61.png" alt="">
+            <h4>Subscribe Newsletter</h4>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+                risus ut pellentesque vel euismod. </p>
+            <div class="newslatter-input">
+                <input class="newslatter-gmail" type="email" name="" id="" placeholder="user@gmail.com">
+                <button class="btn-sub">Subscribe</button>
+            </div>
         </div>
-    </div>
     </main>
     <footer>
-
+        <div class="footer-top">
+            <div>
+                <p>44, Big Building Roosevelt Street</p>
+                <p>Beach Gardens Florida 33410</p>
+            </div>
+            <div>
+              <img src="/ascet/Call.png" alt=""><p>+00 123 584 124</p>
+              
+            </div>
+        </div>
+        <div class="footer-center">
+            <img src="./ascet/Facebook.png" alt="">
+            <img src="./ascet/Linkedin.png" alt="">
+            <img src="./ascet/Twitter.png" alt="">
+            <img src="./ascet/Instagram.png" alt="">
+        </div>
+        <div class="footer-bottom">
+            <div>
+                <p>2017, All Rights Reserved.</p>
+            </div>
+            <div>
+                <p>Unsubscribe</p>
+            </div>
+        </div>
     </footer>
 </body>
 
