--- a/index.html
+++ b/index.html
@@ -80,10 +80,18 @@
             </div>
         </div>
         <div class="footer-center">
-            <img src="./ascet/Facebook.png" alt="">
-            <img src="./ascet/Linkedin.png" alt="">
-            <img src="./ascet/Twitter.png" alt="">
-            <img src="./ascet/Instagram.png" alt="">
+            <a href="https://www.facebook.com/">
+                <img src="./ascet/Facebook.png" alt="">
+            </a>
+            <a href="https://bd.linkedin.com/">
+                <img src="./ascet/Linkedin.png" alt="">
+            </a>
+            <a href="https://twitter.com/?lang=en">
+                <img src="./ascet/Twitter.png" alt="">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img src="./ascet/Instagram.png" alt="">
+            </a>
         </div>
         <div class="footer-bottom">
             <div>
