--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
                 <p>Beach Gardens Florida 33410</p>
             </div>
             <div>
-              <img src="/ascet/Call.png" alt=""><p>+00 123 584 124</p>
-              
+              <div class="footer-top-inline">
+                <img src="/ascet/Call.png" alt="">
+                <p>+00 123 584 124</p>
+              </div>
+              <div class="footer-top-inline">
+                <img src="./ascet/Website.png" alt="">
+                <p>www.website.com</p>
+              </div>
             </div>
         </div>
         <div class="footer-center">
