--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div>
               <div class="footer-top-inline">
-                <img src="/ascet/Call.png" alt="">
+                <img src="./ascet/Call.png" alt="">
                 <p>+00 123 584 124</p>
               </div>
               <div class="footer-top-inline">
