best gift title add

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <img src="./ascet/New Year Photo.png" alt="Hpappy new year image">
             </div>
         </div>
-        <!-- <div class="best-gift">
-            <p>THE BEST GIFTS</p>
+        <div class="best-gift">
+            <p class="red">THE BEST GIFTS</p>
             <h3>Our Awesome Portfolio</h3>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod.</p>
@@ -55,7 +55,7 @@
                     <div class="Photo">
                         <img src="../ascet/Rectangle 8.png" alt="">
                     </div>
-                </div> -->
+                </div>
         </div> 
         <div class="newsletter">
             <img src="./ascet/Group 61.png" alt="">
