--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <title>Happy New Year</title>
     <link rel="shortcut icon" href="./ascet/home.png" type="image/x-icon">
 </head>
-
 <body>
     <header class="banner">
         <div class="banner-title">
@@ -63,7 +61,7 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod. </p>
             <div class="newslatter-input">
-                <input class="newslatter-gmail" type="email" name="" id="" placeholder="user@gmail.com">
+                <input class="newslatter-gmail" type="email" name="" id="email" placeholder="user@gmail.com">
                 <button class="btn-sub">Subscribe</button>
             </div>
         </div>
