--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Our Awesome Portfolio</h3>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod.</p>
-                <div class="Photo-felx">
+                <div class="Photo-grid">
                     <div class="Photo">
                         <img src="../ascet/Rectangle 3.png" alt="">
                     </div>
