--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="best-gift">
             <p class="red">THE BEST GIFTS</p>
             <h3>Our Awesome Portfolio</h3>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
-                risus ut pellentesque vel euismod.</p>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.</p>
+            <p>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 <div class="Photo-grid">
                     <div class="Photo">
                         <img src="../ascet/Rectangle 3.png" alt="">
