--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.</p>
             <p>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 <div class="Photo-grid">
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 3.png" alt="">
+                    <div>
+                        <img width="300px" height="319px" src="./ascet/Rectangle 3.png" alt="">
                     </div>
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 4.png" alt="">
+                    <div>
+                        <img width="300px" height="300px" src="./ascet/Rectangle 4.png" alt="">
                     </div>
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 5.png" alt="">
+                    <div>
+                        <img width="300px" height="300px" src="./ascet/Rectangle 5.png" alt="">
                     </div>
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 6.png" alt="">
+                    <div>
+                        <img width="300px" height="300px" src="./ascet/Rectangle 6.png" alt="">
                     </div>
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 7.png" alt="">
+                    <div>
+                        <img width="300px" height="300px" src="./ascet/Rectangle 7.png" alt="">
                     </div>
-                    <div class="Photo">
-                        <img src="../ascet/Rectangle 8.png" alt="">
+                    <div>
+                        <img width="300px" height="300px" src="./ascet/Rectangle 8.png" alt="">
                     </div>
                 </div>
         </div> 
