--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             <p>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 <div class="Photo-grid">
                     <div>
-                        <img width="300px" height="319px" src="./ascet/Rectangle 3.png" alt="">
+                        <img src="./ascet/Rectangle 3.png" alt="">
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="./ascet/Rectangle 4.png" alt="">
+                        <img src="./ascet/Rectangle 4.png" alt="">
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="./ascet/Rectangle 5.png" alt="">
+                        <img src="./ascet/Rectangle 5.png" alt="">
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="./ascet/Rectangle 6.png" alt="">
+                        <img src="./ascet/Rectangle 6.png" alt="">
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="./ascet/Rectangle 7.png" alt="">
+                        <img src="./ascet/Rectangle 7.png" alt="">
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="./ascet/Rectangle 8.png" alt="">
+                        <img  src="./ascet/Rectangle 8.png" alt="">
                     </div>
                 </div>
         </div> 
